added download link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 
-    <link rel="stylesheet" type="text/css" href="./all.css?7224">
+    <link rel="stylesheet" type="text/css" href="./all.css">
 
     <title>Down Bad</title>
 
@@ -98,7 +98,7 @@
                         <p>
                             <strong>Drag and drop</strong> a <strong>any</strong> video links from <strong>any website</strong>&nbsp;and DownBad will start procesing and downloading the video. There are <strong>no options to configure</strong>, no prompts
                             to accept it&rsquo;s as <strong>simple</strong> as draging and dropping.
-                        </p><a href="./" class="btn btn-lg btn-radical-red btn-clean">Download Now</a>
+                        </p><a href="https://github.com/Aayush9029/DownBad-Site/releases/download/v1.0/DownBad.app.zip" class="btn btn-lg btn-radical-red btn-clean">Download Now</a>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         </h3>
                         <p>
                             DownBad will <strong>automatically</strong> find which site the link is from, process and start the download in an instant. It&rsquo;s super snappy, there are no other hidden process, daemons or extra windows or logs.
-                        </p><a href="./" class="btn btn-lg btn-persian-indigo btn-clean">Download Now</a>
+                        </p><a href="https://github.com/Aayush9029/DownBad-Site/releases/download/v1.0/DownBad.app.zip" class="btn btn-lg btn-persian-indigo btn-clean">Download Now</a>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                     <div class="col-12 col-sm-4">
                         <h4 class="mg-md text-center text-sm-start">
                             Get the app
-                        </h4><a href="./" class="a-btn a-block footer-link">macOS</a>
+                        </h4><a href="https://github.com/Aayush9029/DownBad-Site/releases/download/v1.0/DownBad.app.zip" class="a-btn a-block footer-link">macOS</a>
                     </div>
                     <div class="col-12 col-sm-4">
                         <h4 class="mg-md text-center text-sm-start">
@@ -206,7 +206,7 @@
 
 
     <!-- Additional JS -->
-    <script src="./js/all.js?9306"></script>
+    <script src="./js/all.js"></script>
     <!-- Additional JS END -->
 
 
