--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://aayush9029.github.io/DownBad-Site/">
     <meta property="og:title" content="DownBad - Download any Videos">
     <meta property="og:description" content="Drag and drop a any video links from any website and DownBad will start procesing and downloading the video. There are no options to configure, no prompts to accept it'as simple as draging and dropping.">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Aayush9029/DownBad-Site/master/img/banner.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://aayush9029.github.io/DownBad-Site/">
     <meta property="twitter:title" content="DownBad - Download any Videos">
     <meta property="twitter:description" content="Drag and drop a any video links from any website and DownBad will start procesing and downloading the video. There are no options to configure, no prompts to accept it'as simple as draging and dropping.">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/Aayush9029/DownBad-Site/master/img/banner.png">
 
 </head>
 
